# 3x3-Rubik-s-Cube-Simulator

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  interface-specification.md  sequence.json
cmake/: FetchDependencies.cmake
docs/: animation.md
src/: CMakeLists.txt  main.cpp  main_web.cpp
src/animation/: AnimationManager.cpp  AnimationManager.h
src/app/: DesktopApp.cpp  DesktopApp.h  ImGuiUI.cpp  ImGuiUI.h  WebApp.cpp  WebApp.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h
src/core/: CubeState.cpp  CubeState.h  History.cpp  History.h  Move.cpp  Move.h
src/render/: ArcBallCamera.cpp  ArcBallCamera.h  CubeScene.cpp  CubeScene.h  CubieDrawable.cpp  CubieDrawable.h
src/solver/: Solver.cpp  Solver.h
src/utils/: FileIO.cpp  FileIO.h  Logger.cpp  Logger.h
test/: test_solver.py
tests/: solver_cli.cpp  test_solver.cpp
web/: pre.js  shell.html
